# json-structural-diff

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  json-structural-diff.yml
json-structural-diff-cli/: Cargo.toml  README.md
json-structural-diff-cli/json-diff-cli/: Cargo.toml  README.md
json-structural-diff-cli/json-diff-cli/src/: main.rs
json-structural-diff-cli/src/: main.rs
src/: colorize.rs  diff.rs  lib.rs
