[package]
name = "json-structural-diff-cli"
version = "0.2.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "A Rust JSON structural diff cli"
repository = "https://github.com/Luni-4/json-structural-diff"
keywords = [
    "json-diff-cli",
    "json-structural-diff",
    "json-diff"
]
license = "MIT"
edition = "2021"

[[bin]]
name = "json-structural-diff-cli"

[dependencies]
clap = "^2.33"
console = "^0.13"
json-structural-diff = { path = "..", features=["colorize"]}
rayon = "^1.5"
serde_json = "^1.0"
walkdir = "^2.3"
