[package]
name = "json-diff-cli"
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
description = "A Rust JSON structural diff cli"
repository = "https://github.com/Luni-4/json-structural-diff"
keywords = [
    "json-diff",
    "json-diff-cli",
    "json-structural-diff"
]
license = "MIT"
edition = "2018"

[[bin]]
name = "json-diff-cli"

[dependencies]
clap = "^2.33"
console = "^0.13"
json-structural-diff = { path = "..", version = "0.1.0", features=["colorize"]}
rayon = "^1.5"
serde_json = "^1.0"
walkdir = "^2.3"
